<resources>
    <string name="app_name">Shopping List</string>
    <string name="activity2_name">Second Activity</string>
    <string name="add_item">Add Item</string>
    <string name="cheese">Cheese</string>
    <string name="rice">Rice</string>
    <string name="apples">Apples</string>
    <string name="bread">Bread</string>
    <string name="milk">Milk</string>
    <string name="butter">Butter</string>
    <string name="eggs">Eggs</string>
    <string name="cereal">Cereal</string>
    <string name="flour">Flour</string>
    <string name="sugar">Sugar</string>
</resources>