<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <Button
        android:id="@+id/btn_one_cheese"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:text="@string/cheese"
        android:textAlignment="center"
        android:textStyle="bold"
        android:onClick="returnItem"
        app:layout_constraintBottom_toTopOf="@+id/btn_two_rice"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_two_rice"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:text="@string/rice"
        android:textAlignment="center"
        android:textStyle="bold"
        android:onClick="returnItem"
        app:layout_constraintBottom_toTopOf="@+id/btn_three_apples"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_one_cheese" />

    <Button
        android:id="@+id/btn_three_apples"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:text="@string/apples"
        android:textAlignment="center"
        android:textStyle="bold"
        android:onClick="returnItem"
        app:layout_constraintBottom_toTopOf="@+id/btn_four_bread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_two_rice" />

    <Button
        android:id="@+id/btn_four_bread"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:text="@string/bread"
        android:textAlignment="center"
        android:textStyle="bold"
        android:onClick="returnItem"
        app:layout_constraintBottom_toTopOf="@+id/btn_five_milk"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_three_apples" />

    <Button
        android:id="@+id/btn_five_milk"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:text="@string/milk"
        android:textAlignment="center"
        android:textStyle="bold"
        android:onClick="returnItem"
        app:layout_constraintBottom_toTopOf="@+id/btn_six_butter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_four_bread" />

    <Button
        android:id="@+id/btn_six_butter"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:text="@string/butter"
        android:textAlignment="center"
        android:textStyle="bold"
        android:onClick="returnItem"
        app:layout_constraintBottom_toTopOf="@+id/btn_seven_eggs"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_five_milk" />

    <Button
        android:id="@+id/btn_seven_eggs"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:text="@string/eggs"
        android:textAlignment="center"
        android:textStyle="bold"
        android:onClick="returnItem"
        app:layout_constraintBottom_toTopOf="@+id/btn_eight_cereal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_six_butter" />

    <Button
        android:id="@+id/btn_eight_cereal"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:text="@string/cereal"
        android:textAlignment="center"
        android:textStyle="bold"
        android:onClick="returnItem"
        app:layout_constraintBottom_toTopOf="@+id/btn_nine_flour"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_seven_eggs" />

    <Button
        android:id="@+id/btn_nine_flour"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:text="@string/flour"
        android:textAlignment="center"
        android:textStyle="bold"
        android:onClick="returnItem"
        app:layout_constraintBottom_toTopOf="@+id/btn_ten_sugar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_eight_cereal" />

    <Button
        android:id="@+id/btn_ten_sugar"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/sugar"
        android:textAlignment="center"
        android:textStyle="bold"
        android:onClick="returnItem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_nine_flour" />

</androidx.constraintlayout.widget.ConstraintLayout>